src/app/app-entry/app-entry.component.scss
mat-sidenav-content {
  position: relative;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  overflow: hidden;

  .header-wrapper {
    // background-color: cyan;
    z-index: 2;
  }

  .background-graphic-wrapper {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    height: 100vh;
    // background-color: green;
    z-index: -1;
  }

  .content-wrapper {
    position: relative;
    width: 100%;
    display: flex;
    flex: 1; // child will set to an equal size inside the container
    // background-color: rgba(255, 0, 0, 0);
    opacity: 0; // Increased by animations below
  }

  .stream-message-wrapper {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    height: 100vh;
    z-index: 1;
    animation: fade-in 600ms;
  }

  @keyframes fade-in {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  .footer-wrapper {
    position: relative;
    z-index: 10;
    width: 100%;
    opacity: 1;

    .footer-animator {
      // background-color: blue;
      position: absolute;
      bottom: 0px;
      right: 0px;
      left: 0px;
      opacity: 1;
      overflow: hidden;
    }
  }
}

////////////////////////////////
////////////////////////////////
////////////////////////////////
// ANIMATIONS //////////////////
////////////////////////////////
////////////////////////////////
////////////////////////////////

@keyframes pageFadeIn {
  0% {
    opacity: 0;
    transform: translateY(-25px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes pageFadeOut {
  0% {
    opacity: 1;
    transform: translateY(0px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
    transform: translateY(-25px);
  }
}

